added linear measures

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@ utils/__pycache__/rqa_utils.cpython-310.pyc
 utils/__pycache__/utils.cpython-310.pyc
 utils/__pycache__/__init__.cpython-310.pyc
 utils/__pycache__/dfa_utils.cpython-310.pyc
+utils/__pycache__/__init__.cpython-310.pyc
+utils/__pycache__/coherence_utils.cpython-310.pyc
+utils/__pycache__/corr_utils.cpython-310.pyc
+utils/__pycache__/period_amplitude_utils.cpython-310.pyc
+utils/__pycache__/relative_phase_utils.cpython-310.pyc
+utils/__pycache__/__init__.cpython-310.pyc
