--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ utils/__pycache__/corr_utils.cpython-310.pyc
 utils/__pycache__/period_amplitude_utils.cpython-310.pyc
 utils/__pycache__/relative_phase_utils.cpython-310.pyc
 utils/__pycache__/__init__.cpython-310.pyc
+utils/__pycache__/__init__.cpython-310.pyc
